# Wedding-Website

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  bacon.toml  flake.nix  rust-toolchain.toml
.github/workflows/: code-coverage.yaml  conventional-commits.yaml  formatting.yaml
src/: main.rs
